--- a/home/index.html
+++ b/home/index.html
@@ -351,6 +351,9 @@ main.container{flex:1}
     <a href="https://ko-fi.com/sharpennd" target="_blank" class="link-btn" data-tooltip="sharpennd">
       <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/kofi.svg">Ko-Fi
     </a>
+    <a href="https://letterboxd.com/sharpennd/" target="_blank" class="link-btn" data-tooltip="sharpennd">
+      <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/letterboxd.svg">Letterboxd
+    </a>
   </section>
 </main>
 
