--- a/home/index.html
+++ b/home/index.html
@@ -290,7 +290,7 @@ main.container{flex:1}
 <header class="site-header">
   <div class="header-inner">
     <img src="../assets/paw.png" width="26" height="26">
-    <a href="https://jellyfin.sharpennd.xyz" target="_blank" class="link-btn" data-tooltip="Jellyfin">
+    <a href="https://jellyfin.sharpennd.xyz" target="_blank" class="link-btn">
       <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/jellyfin.svg">Jellyfin
     </a>
   </div>
