--- a/home/index.html
+++ b/home/index.html
@@ -285,15 +285,19 @@ main.container{flex:1}
   display: inline-block;
 }
 </style>
+
 </head>
 <body>
 <header class="site-header">
   <div class="header-inner">
+  <div style="display:flex;align-items:center;">
     <img src="../assets/paw.png" width="26" height="26">
-    <a href="https://jellyfin.sharpennd.xyz" target="_blank" class="link-btn">
-      <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/jellyfin.svg">Jellyfin
-    </a>
   </div>
+
+  <a href="https://jellyfin.sharpennd.xyz" target="_blank" class="link-btn">
+    <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/jellyfin.svg">Jellyfin
+  </a>
+</div>
 </header>
 
 <main class="container">
