--- a/home/index.html
+++ b/home/index.html
@@ -50,6 +50,34 @@ body{
 .header-inner .link-btn{
   margin-top:0;
 }
+
+.nav-left{
+  display:flex;
+  align-items:center;
+}
+
+.nav-links{
+  display:flex;
+  align-items:center;
+  gap:6px;
+  margin-left:18px;
+}
+
+.nav-link{
+  font-size:13px;
+  font-weight:500;
+  color:var(--muted);
+  text-decoration:none;
+  padding:4px 6px;
+  border-radius:6px;
+  transition:color .2s ease, background .2s ease;
+}
+
+.nav-link:hover{
+  color:var(--text);
+  background:rgba(255,255,255,.06);
+}
+
 main.container{flex:1}
 .hero{
   display:flex;
@@ -291,6 +319,10 @@ main.container{flex:1}
   <div class="header-inner">
   <div style="display:flex;align-items:center;">
     <img src="../assets/paw.png" width="26" height="26">
+    <nav class="nav-links">
+    <a href="../index.html" class="nav-link">Home</a>
+    <a href="../blog/index.html" class="nav-link">Blog</a>
+  </nav>
   </div>
 
   <a href="https://jellyfin.sharpennd.xyz" target="_blank" class="link-btn">
