--- a/home/index.html
+++ b/home/index.html
@@ -321,7 +321,7 @@ main.container{flex:1}
     <img src="../assets/paw.png" width="26" height="26">
     <nav class="nav-links">
     <a href="../index.html" class="nav-link">Home</a>
-    <a href="../blog/index.html" class="nav-link">Blog</a>
+    <a href="../blog/" class="nav-link">Blog</a>
   </nav>
   </div>
 
