--- a/home/index.html
+++ b/home/index.html
@@ -371,11 +371,17 @@ main.container{flex:1}
     <a href="mailto:grey@sharpennd.xyz" target="_blank" class="link-btn" data-tooltip="grey@sharpennd.xyz">
       <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/maildotru.svg">Email
     </a>
+    <a href="https://github.com/sharpennd" target="_blank" class="link-btn" data-tooltip="sharpennd">
+      <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/github.svg">GitHub
+    </a>
     <a href="https://discord.com/users/340138001252220939/" target="_blank" class="link-btn" data-tooltip="sharpennd">
       <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/discord.svg">Discord
     </a>
     <a href="https://ko-fi.com/sharpennd" target="_blank" class="link-btn" data-tooltip="sharpennd">
       <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/kofi.svg">Ko-Fi
+    </a>
+    <a href="https://letterboxd.com/sharpennd/" target="_blank" class="link-btn" data-tooltip="sharpennd">
+      <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/letterboxd.svg">Letterboxd
     </a>
   </section>
 </main>
