--- a/home/index.html
+++ b/home/index.html
@@ -367,7 +367,7 @@ main.container{flex:1}
       <li>Drawing and 2D animation</li>
     </ul>
     <p>...And a whole lot more!</p>
-    <p style="margin-top:6px">Below is a list of my socials and other links where you can view my content, support me, or contact me!</p>
+    <p style="margin-top:6px">Below is a list of links where you can view my content, support me, or contact me!</p>
     <a href="mailto:grey@sharpennd.xyz" target="_blank" class="link-btn" data-tooltip="grey@sharpennd.xyz">
       <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/maildotru.svg">Email
     </a>
