--- a/home/index.html
+++ b/home/index.html
@@ -315,7 +315,7 @@ main.container{flex:1}
 
 </head>
 <body>
-<script src="https://louisabraham.github.io/nekojs/neko.js" data-autostart></script>
+<script data-cat="../assets/oneko.gif" src="../assets/oneko.js"></script>
 <header class="site-header">
   <div class="header-inner">
   <div style="display:flex;align-items:center;">
