--- a/404/index.html
+++ b/404/index.html
@@ -133,6 +133,7 @@
 </head>
 
 <body>
+  <script data-cat="../assets/oneko.gif" src="../assets/oneko.js"></script>
   <header class="site-header">
     <div class="container header-inner">
       <div class="left-section">
