--- a/404/index.html
+++ b/404/index.html
@@ -6,6 +6,7 @@
   <title>sharpennd - 404</title>
   <link rel="icon" href="../assets/favicon.ico" />
   <meta name="description" content="sharpennd.xyz" />
+  <link rel="icon" href="../assets/paw-64.ico" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 
   <style>
