--- a/home/index.html
+++ b/home/index.html
@@ -352,7 +352,7 @@ main.container{flex:1}
   </section>
 
   <section class="card">
-    <p>Hi, I'm Grey, also known as <b>'sharpennd'</b> on some corners of the internet, welcome to my website! :3</p>
+    <p>Hi, I'm Grey, also known as <b>'sharpennd'</b> on some corners of the internet, welcome to my website!</p>
     <p style="margin-top:6px">My current interests include:</p>
     <ul class="inline-list">
       <li>Technology, both modern and vintage</li>
